# paperminder-server

./: .dockerignore  .env.example  .gitignore  BITMAP_PRINTING.md  CLAUDE.md  Dockerfile  FIRMWARE_UPDATE_GUIDE.md  README.md  SERVER_IMPLEMENTATION.md  alembic.ini  compile-requirements.sh  debug_server.py  migrate.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 20241227_initial_schema_postgresql.py  2025-12-27_1845_97969ba2b14e_fix_messagelog_fk_to_reference_printers.py  2025-12-28_1119_8ac4141a98c6_add_channel_to_update_rollouts.py  2025-12-30_1200_add_firmware_update_cache_table.py
src/: config.py  crud.py  database.py  dependencies.py  exceptions.py  main.py
src/controllers/: __init__.py  message_controller.py
src/models/: __init__.py  auth.py  bitmap.py  firmware.py  message.py
src/services/: __init__.py  bitmap_service.py  firmware_service.py  message_service.py  printer_service.py  rollout_service.py  update_service.py
src/static/: debug.html
src/utils/: __init__.py  bitmap.py  platform.py  sanitizer.py
src/views/: __init__.py  auth.py  firmware.py  health.py  message.py  message_routes.py  printer.py  printer_routes.py  routes.py  ws.py
tests/: __init__.py  conftest.py  test_database.py  test_main.py  test_message_controller.py  test_models.py  test_routes.py  test_websocket.py
