[project]
name = "paperminder-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
    "wsproto>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "httpx>=0.28.1",
]
