[project]
name = "paperminder-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.29.0",
    "authx>=1.4.3",
    "bcrypt>=5.0.0",
    "fastapi>=0.117.1",
    "passlib>=1.7.4",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.21",
    "qrcode>=7.4.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
    "wsproto>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "alembic>=1.13.0",
    "pytest>=8.3.3",
    "httpx>=0.28.1",
]
